changed button links and client changes

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -545,7 +545,7 @@ header .flexyItem {
 	border: 0px;
 	padding: 0px 0px 0px 0px;
 	overflow: hidden;
-	background: url('img/merch-right.svg');
+	background: url('img/merch-right.jpeg');
 	background-repeat: no-repeat;
 	background-position: right center;
 	background-size: 25%;
