--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1041,7 +1041,7 @@ header .flexyItem {
 /**THAK YOU PAGE**/
 
 #splashFormContainer.thankBg {
-  background-image: url("resources/images/thankyou-bg.svg");
+  background-image: url("img/thankyou-bg.svg");
   background-size: 226px;
   background-repeat: no-repeat;
   background-position: 96% 90%;
@@ -2388,4 +2388,27 @@ footer a {
 
 .blockLink{
   cursor: pointer;
+}
+
+.my-btn {
+  color: #fff;
+    background: #7175e1;
+    border: 2px solid #7175e1;width: 180px;
+    height: 99px;
+    
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    margin: 0px auto;
+    border-radius: 5px;
+    padding: 35px 10px;
+    border-radius: 9px;
+    -moz-border-radius: 9px;
+    -webkit-border-radius: 9px;
+    display: block;
+    box-sizing: border-box;
+    cursor: pointer;
+    background-color: #424595;
+    border: 2px solid #424595;
 }
