--- a/public/css/global.css
+++ b/public/css/global.css
@@ -2033,7 +2033,7 @@ button.squareFormButton {
   display: block;
   width: 100%;
   height: 100%;
-  background: transparent;
+  /*background: transparent;*/
   text-align: left;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -2411,4 +2411,27 @@ footer a {
     cursor: pointer;
     background-color: #424595;
     border: 2px solid #424595;
+}
+
+.form-input:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+input[type=submit] {
+  display: block;
+  -webkit-appearance: button;
+  font-size: 15px;
+  width: 135px;
+  height: 36px;
+  margin-left: 254px;
+  background-color: #E18988;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 3px;
+}
+
+/* Forces .form-input styles onto search type */
+input[type=search] {
+  -webkit-appearance: textfield;
+  box-sizing: content-box;
 }
