--- a/public/css/slick-v1.css
+++ b/public/css/slick-v1.css
@@ -139,7 +139,7 @@
 .slick-prev,
 .slick-next
 {
-    font-size: 0;
+    /*font-size: 0;
     line-height: 0;
 
     position: absolute;
@@ -154,7 +154,7 @@
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
 
-    cursor: pointer;
+    cursor: pointer;*/
 
     color: transparent;
     border: none;
